- feat: update the website with latest from the demos "the changes are already old, but were not synced with the website"

--- a/my-apps/hotspotter/Editor/Editor.html
+++ b/my-apps/hotspotter/Editor/Editor.html
@@ -6,7 +6,7 @@
 
         <link rel="shortcut icon" href="images/favicon.ico">
 
-        <link rel="stylesheet" href="../css/jquery-hotspotter.min.css">
+        <link rel="stylesheet" href="css/jquery-hotspotter.min.css">
 
         <link rel="stylesheet" type="text/css" href="css/ui-darkness/jquery-ui-1.9.2.custom.min.css" />
 
@@ -40,7 +40,7 @@
     </head>
     <body>
         <a id="buy-now" href="http://codecanyon.net/item/hotspotter-hotspot-maker-jquery-plugin/3833015?ref=z-B">Buy Now!</a>
-        
+
         <div class="ed-top">
             <button id="nimg-btn" title="New Image"><span class="btn-icon"><img src="images/new-img.png" /></span>New Image</button>
             <button id="prev-btn" title="Start Preview  (ctrl + alt)"><span class="btn-icon"><img src="images/start-prev.png" /></span>Preview</button>
@@ -264,7 +264,7 @@
         <script>window.jQuery.ui || document.write('<script src="js/jquery-ui-1.9.2.min.js"><\/script>')</script>
         <script type="text/javascript" src="js/beautify-html.min.js"></script>
 
-        <script src="../js/jquery-hotspotter.min.js"></script>
+        <script src="js/jquery-hotspotter.min.js"></script>
 
         <script src="js/editor.min.js"></script>
     </body>
