--- a/my-apps/hotspotter/spotlink.html
+++ b/my-apps/hotspotter/spotlink.html
@@ -4,18 +4,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Hotspotter - Cool Hotspot Maker jQuery Plugin - Test Spot Link</title>
 
-    <link rel="stylesheet" type="text/css" href="css/jquery-hotspotter.min.css" />
-    <!--[if lt IE 9]><link rel="stylesheet" type="text/css" href="css/ie7-8.min.css" /><![endif]-->
+    <link rel="stylesheet" href="css/jquery-hotspotter.min.css">
 
-    <style>
-        .hs-area {
-            margin-top: 700px;
-            margin-bottom: 500px;
-        }
-    </style>
+    <!--[if lt IE 9]><link rel="stylesheet" type="text/css" href="css/ie7-8.css" /><![endif]-->
 </head>
 <body>
     Hotspotter , Test spot links
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <div class="hs-area" style="font: 12px arial, sans-serif;line-height: 20px;">
         <img data-imgdim="640,480" src="img/lungern.jpg" style="width: 700px;">
@@ -43,22 +40,16 @@
             </div>
         </div>
     </div>
-
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src="js/jquery-hotspotter.min.js"></script>
-    <script>
+
+    <!-- build:js ../plugin/minified/jquery-hotspotter.min.js -->
+    <script type="text/javascript" src="js/jquery-hotspotter.min.js"></script>
+    <!-- /build -->
+
+    <script type="text/javascript">
         $('.hs-area').hotspotter();
     </script>
-
-    <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-          ga('create', 'UA-47059705-1', 'dbasem.com');
-          ga('send', 'pageview');
-        </script>
 </body>
 </html>
