- fix: test fix with timeout to resolve issue when loading within an iframe and the image dimension is not known yet

--- a/my-apps/hotspotter/index.html
+++ b/my-apps/hotspotter/index.html
@@ -624,7 +624,10 @@ $(<span style='color:#2a00ff; '>"</span><span style='color:#2a00ff; '>#myspot</s
         <script src="js/jquery-hotspotter.min.js"></script>
 
         <script type="text/javascript">
-            $('.hs-area').hotspotter({imgTopMargin: 50});
+
+            setTimeout(() => {
+                $('.hs-area').hotspotter({imgTopMargin: 50});
+            }, 10)
 
             $('#resize').resizable({
                 aspectRatio: true,
