- fix: add `data-imgdim` to ensure image dimensions are known before the image is loaded to fix an issue in Envato's demo iframe where spots are rendered outside the image

--- a/my-apps/hotspotter/index.html
+++ b/my-apps/hotspotter/index.html
@@ -144,7 +144,7 @@
             <div id="default-spots-container">
 
                 <div class="hs-area">
-                    <img src="img/lungern.jpg">
+                    <img src="img/lungern.jpg" data-imgdim="640,480">
 
                     <div class="hs-wrap">
                         <div data-activeon="always" data-dim="640,24,0" data-coord="0,0" class="invisible-spot"></div>
@@ -229,7 +229,7 @@
             <p class="before-area">You can use it with any spot , even with your custom spots , Example:</p>
 
             <div class="hs-area">
-                <img src="img/yalta_summit_1945.jpg">
+                <img src="img/yalta_summit_1945.jpg" data-imgdim="461,372">
 
                 <div class="hs-wrap">
                     <div data-activeon="always" data-dim="521,12,0" data-coord="0,0" class="invisible-spot"></div>
@@ -485,7 +485,7 @@
                     </td>
                     <td>
                         <div class="hs-area" id="controlled-area">
-                            <img src="img/galaxy.jpg">
+                            <img src="img/galaxy.jpg" data-imgdim="288,189">
                             <div class="hs-wrap">
                                 <div data-activeon="hover" data-dim="18,18,3" data-coord="95.75,155" class="red-spot" id="Mercury"></div>
                                 <div class="tt-wrap">
